Swagger updated for latest transactions
