# expensetrackerapi/swagger-output.json
@@ -657,6 +657,19 @@
         }
       }
     },
+    "/api/transaction/latest": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "transaction retrieved successfully."
+          }
+        }
+      }
+    },
     "/api/transaction/{transactionId}": {
       "patch": {
         "tags": [
